src/index.css
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

@layer utilities {
  .font-arabic, .amiri-regular {
    font-family: "Amiri", serif;
    font-weight: 400;
    font-style: normal;
  }

  .amiri-bold {
    font-family: "Amiri", serif;
    font-weight: 700;
    font-style: normal;
  }

  .amiri-regular-italic {
    font-family: "Amiri", serif;
    font-weight: 400;
    font-style: italic;
  }

  .amiri-bold-italic {
    font-family: "Amiri", serif;
    font-weight: 700;
    font-style: italic;
  }

  .font-malayalam {
    font-family: "Noto Serif Malayalam", serif;
  }

  .font-english {
    font-family: "Sora", sans-serif;
  }
}

body {
  font-family: "Sora", sans-serif;
}

